<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7E5843"
    tools:context=".Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutCutTree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgCuttingTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cutting_tree_img_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cutting_tree_cropped" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvCuttingLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lets_get_logs"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutCutTree" />

    <ScrollView
        android:id="@+id/ScrollViewRegisterForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/tvMemberCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCuttingLogs">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/RegisterForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextRegisterFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/first_name"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextRegisterLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/last_name"
                android:hint="@string/last_name"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextRegisterFirstName" />

            <EditText
                android:id="@+id/editTextRegisterDateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/dob"
                android:hint="@string/dob"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextRegisterLastName" />

            <EditText
                android:id="@+id/editTextRegisterEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextRegisterDateOfBirth" />

            <EditText
                android:id="@+id/editTextRegisterPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:hint="@string/password"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextRegisterEmail" />

            <EditText
                android:id="@+id/editTextRegisterPasswordConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password_confirm"
                android:hint="@string/password_confirm"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextRegisterPassword" />

            <Button
                android:id="@+id/btnSubmitRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="register"
                android:text="@string/btn_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextRegisterPasswordConfirm" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvMemberCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="goToLogin"
        android:text="@string/go_login"
        android:textColor="#0000EE"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>